// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders Chinese characters correctly 1`] = `
<button
  class="m-button"
  type="button"
>
  <div
    class="m-button-inner"
  >
    <span>
      按 钮
    </span>
  </div>
</button>
`;

exports[`Button renders Chinese characters correctly 2`] = `
<button
  class="m-button m-button-icon"
  type="button"
>
  <div
    class="m-button-inner"
  >
    <i
      class="m-icon m-icon-search"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        height="1em"
        width="1em"
      >
        <use
          href="#icon-search"
        />
      </svg>
    </i>
    <span>
      按钮
    </span>
  </div>
</button>
`;

exports[`Button renders Chinese characters correctly 3`] = `
<button
  class="m-button"
  type="button"
>
  <div
    class="m-button-inner"
  >
    <i
      class="m-icon m-icon-search"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        height="1em"
        width="1em"
      >
        <use
          href="#icon-search"
        />
      </svg>
    </i>
    <span>
      按钮
    </span>
  </div>
</button>
`;

exports[`Button renders Chinese characters correctly 4`] = `
<button
  class="m-button m-button-icon"
  type="button"
>
  <div
    class="m-button-inner"
  >
    <i
      class="m-icon m-icon-search"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        height="1em"
        width="1em"
      >
        <use
          href="#icon-search"
        />
      </svg>
    </i>
    <span>
      按钮
    </span>
  </div>
</button>
`;

exports[`Button renders Chinese characters correctly 5`] = `
<button
  class="m-button m-button-loading m-button-icon"
  type="button"
>
  <div
    class="m-button-inner"
  >
    <i
      class="m-icon m-icon-loading m-icon-spin"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        height="1em"
        width="1em"
      >
        <use
          href="#icon-loading"
        />
      </svg>
    </i>
    <span>
      按钮
    </span>
  </div>
</button>
`;

exports[`Button renders Chinese characters correctly 6`] = `
<button
  class="m-button m-button-loading m-button-icon"
  type="button"
>
  <div
    class="m-button-inner"
  >
    <i
      class="m-icon m-icon-loading m-icon-spin"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        height="1em"
        width="1em"
      >
        <use
          href="#icon-loading"
        />
      </svg>
    </i>
    <span>
      按 钮
    </span>
  </div>
</button>
`;

exports[`Button renders Chinese characters correctly 7`] = `
<button
  class="m-button"
  type="button"
>
  <div
    class="m-button-inner"
  >
    <span>
      按 钮
    </span>
  </div>
</button>
`;

exports[`Button renders Chinese characters correctly 8`] = `
<button
  class="m-button"
  type="button"
>
  <div
    class="m-button-inner"
  />
</button>
`;

exports[`Button renders correctly 1`] = `
<button
  class="m-button"
  type="button"
>
  <div
    class="m-button-inner"
  >
    <span>
      Default
    </span>
  </div>
</button>
`;
